--- a/src/CrushDB/CrushDB.csproj
+++ b/src/CrushDB/CrushDB.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="dotnet-etcd" Version="6.0.1" />
+  </ItemGroup>
+
 </Project>
