--- a/tests/CrushDB.Tests.Performance/CrushDB.Tests.Performance.csproj
+++ b/tests/CrushDB.Tests.Performance/CrushDB.Tests.Performance.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\CrushDB\CrushDB.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
